--- a/bdi/WebContent/user/login.html
+++ b/bdi/WebContent/user/login.html
@@ -5,7 +5,7 @@
 <title>Login</title>
 </head>
 <body>
-	<form onsubmit="return checkValue(this)">
+	<form onsubmit="return checkValue(this)" action="/user/login.jsp">
 		<table border="1">
 			<tr>
 				<th>아이디</th>
